--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
   <!-- <link rel="stylesheet" href="css/styles.min.css"> -->
-  <title>Frontend Developer</title>
+  <title>Afrianska</title>
 </head>
 <body>
 <!-- HEADER -->
@@ -17,24 +17,6 @@
 
 <!-- MAIN -->
   <main class="main">
-    <form action="https://echo.htmlacademy.ru" method="POST">
-      <div class="input__wrapper">
-        <input class="input" type="text" name="name" aria-label="Name" placeholder="Name" required>
-      </div>
-
-      <div class="input__wrapper">
-        <input class="input" type="email" name="email" aria-label="Email" placeholder="Email" required>
-      </div>
-
-      <div class="input__wrapper">
-        <textarea class="input" name="" id="" cols="22" rows="10"></textarea>
-      </div>
-      <button class="submit__button" type="submit">Jo'natish</button>
-    </form>
-
-
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit animi, repellendus iste, cumque beatae nobis nihil maiores, totam ullam facilis esse a alias adipisci error tempora eos deleniti fugit porro.
-  </main>
 
 
 <!-- FOOTER -->
